--- a/Foosinator/Views/Game/Index.cshtml
+++ b/Foosinator/Views/Game/Index.cshtml
@@ -1,74 +1,40 @@
 ﻿@model Foosinator.Models.Game
-
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-md-4 text-center">
+        <a href="/game/done/?game=@Model.Id&player=@Model.Player1Id">
+            <div class="well">
+                <h1>@Model.Player1.Name</h1>
 
-<div>
-    <h4>Game</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
+                @if (Model.Player3Id != null)
+                {
+                    <h1>@Model.Player3.Name</h1>
+                }
+            </div>
+        </a>
+    </div>
+    <div class="col-md-4 text-center">
+        <h3>vs</h3>
+    </div>
+    <div class="col-md-4 text-center">
+        <a href="/game/done/?game=@Model.Id&player=@Model.Player2Id">
+            <div class="well">
+                <h1>@Model.Player2.Name</h1>
 
-        <dd>
-            @Html.DisplayFor(model => model.Created)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Pin)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Pin)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Player1Id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Player1Id)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Player2Id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Player2Id)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Player3Id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Player3Id)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Player4Id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Player4Id)
-        </dd>
-
-    </dl>
+                @if (Model.Player4Id != null)
+                {
+                    <h1>@Model.Player4.Name</h1>
+                }
+            </div>
+        </a>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+<p class="text-center">Click on the winning person/team.</p>
+
+<hr />
+
+<p class="text-center">@Html.ActionLink("Cancel game", "Cancel", new { id = Model.Id }, new { @class = "btn btn-danger" })</p>
