--- a/Foosinator/Views/Game/Index.cshtml
+++ b/Foosinator/Views/Game/Index.cshtml
@@ -7,11 +7,31 @@
     <div class="col-md-4 text-center">
         <a href="/game/done/?game=@Model.Id&player=@Model.Player1Id">
             <div class="well">
-                <h1>@Model.Player1.Name</h1>
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="@Model.Player1.ProfilePicture" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>@Model.Player1.Name</h1>
+                    </div>
+                </div>
 
                 @if (Model.Player3Id != null)
                 {
-                    <h1>@Model.Player3.Name</h1>
+                    <hr/>
+                    
+                    <div class="row">
+                        <div class="col-md-12">
+                            <img src="@Model.Player3.ProfilePicture" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>@Model.Player3.Name</h1>
+                        </div>
+                    </div>
                 }
             </div>
         </a>
@@ -22,11 +42,31 @@
     <div class="col-md-4 text-center">
         <a href="/game/done/?game=@Model.Id&player=@Model.Player2Id">
             <div class="well">
-                <h1>@Model.Player2.Name</h1>
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="@Model.Player2.ProfilePicture" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>@Model.Player2.Name</h1>
+                    </div>
+                </div>
 
-                @if (Model.Player4Id != null)
+                @if (Model.Player3Id != null)
                 {
-                    <h1>@Model.Player4.Name</h1>
+                    <hr />
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <img src="@Model.Player4.ProfilePicture" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>@Model.Player4.Name</h1>
+                        </div>
+                    </div>
                 }
             </div>
         </a>
