--- a/Foosinator/Views/Player/Create.cshtml
+++ b/Foosinator/Views/Player/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Foosinator.Models.Player
+﻿@using SlackAPI.Models
+@model Foosinator.Models.CreatePlayerViewModel
 
 @{
     ViewBag.Title = "Add";
@@ -6,29 +7,25 @@
 
 <h2>Add a player</h2>
 
-@using (Html.BeginForm()) 
+@foreach (Member member in Model.Members)
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+    <div class="row">
+        <div class="col-md-12">
+            <div class="well">
+                <div class="row">
+                    <div class="col-md-3">
+                        <a href="/player/add/@member.Id">
+                            <img src="@member.Profile.Image192" />
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="/player/add/@member.Id">
+                            <h1>@member.Name</h1>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <br />
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
